
syntax="proto3";

package search.v1;
option go_package="search/v1;searchv1";

// SyncService 在大体量的情况下，这个接口可以考虑进一步细分
// 也就是细分为 UserSyncService 和 ArticleSyncService
service SyncService {
  rpc InputUser (InputUserRequest) returns (InputUserResponse);
  rpc InputArticle (InputArticleRequest) returns (InputArticleResponse);
  rpc InputAny(InputAnyRequest) returns(InputAnyResponse);
}

message InputAnyRequest {
  string index_name = 1;
  string doc_id = 2;
  string data = 3;
}

message InputAnyResponse {

}

message InputUserRequest {
  User user = 1;
}

message InputUserResponse {
}

message InputArticleRequest {
  Article article = 1;
}

message InputArticleResponse {
}

message Article {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int32 status = 4;
}

message User {
  int64 id = 1;
  string nickname = 2;
  string email = 3;
  string phone = 4;
}